--- a/gapmind.html
+++ b/gapmind.html
@@ -62,6 +62,15 @@ path.cell {
   stroke: brown;
 }
 
+.selected {
+  opacity: 1;
+  box-shadow: 10px 5px 5px black;
+}
+
+.unselected {
+  opacity: 0.7 !important;
+}
+
 
 </style>
 
