Fixes formatting and allows target acquisition method to be selected by the user.

--- a/gapmind.html
+++ b/gapmind.html
@@ -62,6 +62,10 @@ path.cell {
   stroke: brown;
 }
 
+.hidden {
+   display: none;
+}
+
 .selected {
   opacity: 1;
 }
@@ -80,7 +84,7 @@ path.cell {
     </div>
     <div>
     Select Target Acquisition Method
-    <select id="ta_selector">
+    <select id="target_acquisition_selector">
        <option value="voronoi">Voronoi Tesselation</option>
        <option value="BubbleCursor">Bubble Cursor</option>
     </select>
