Adds checkbox functionality for two target acquisition methods.

--- a/gapmind.html
+++ b/gapmind.html
@@ -109,10 +109,10 @@ path.cell {
     </div>
 
     <div id="voronoi_checkbox">
-      <input type="checkbox" id="target_acquisition_method"> <label for="TargetAcquisition">Show Voronoi Cells</label>
+      <input type="checkbox" class="target_acquisition_method"> <label for="TargetAcquisition">Show Voronoi Cells</label>
     </div>
     <div id="bubbleCursor_checkbox" class="hidden">
-      <input type="checkbox" id="target_acquisition_method"> <label for="TargetAcquisition">Show Curosr Bubbles</label>
+      <input type="checkbox" class="target_acquisition_method"> <label for="TargetAcquisition">Show Curosr Bubbles</label>
     </div>
 </div>
 <div id="country_data">
