Add a world map with highlighted regions.

--- a/gapmind.html
+++ b/gapmind.html
@@ -29,6 +29,10 @@ div#country_data {
    display: inline-block !important;
 }
 
+div#map {
+   display: inline-block !important;
+}
+
 #heading {
    display: inline-block;
    width: 100%;
@@ -138,6 +142,8 @@ path.cell {
 <span id="population"></span><br>
 <span id="life_expectancy"></span>
 </div>
+<div id="map">
+</div>
 </div>
 <p id="chart"></p>
 
@@ -146,6 +152,8 @@ path.cell {
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/1.4.5/numeral.min.js"></script>
 <script src="http://d3js.org/topojson.v1.min.js"></script>
+<script src="http://d3js.org/d3.geo.projection.v0.min.js"></script>
 <script src="gapmind.js">
+<script src="map.js">
 </script>
 <script>
